[package]
name = "mevshare-ctf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
ethers = {version = "2.0.8", features = ["ws"]}
eyre = "0.6.8"
futures-util = "0.3.28"
jsonrpsee =  {version = "0.18", features = ["client", "async-client"]}
mev-share = {git = "https://github.com/paradigmxyz/mev-share-rs"}
tokio = {version= " 1.29.1", features = ["macros","rt-multi-thread"]}
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}

[build-dependencies]
ethers-contract = "2.0.8"